--- a/SRteacher/DACC-session - 複製.html
+++ b/SRteacher/DACC-session - 複製.html
@@ -819,153 +819,112 @@ $(document).ready(function () {
       loadStudentSetDOM();
     });
   });
+	
+	//[設定學生]DOM
+  function loadStudentSetDOM() {
+    $.getJSON('Content/json/DACC-session/studentSet.json', function (data) {
+      let gradeArray = data.data;
+      let accordionHTML = '';
 
-	// [設定學生] DOM
-	function loadStudentSetDOM() {
-		$.getJSON('Content/json/DACC-session/studentSet.json', function (res) {
+      for (let i = 0; i < gradeArray.length; i++) { //X年級
+        let classArray = gradeArray[i].table;
+        let tableHTML = '';
 
-			const gradeArray = res.data;
-			let accordionHTML = '';
+        for (let j = 0; j < classArray.length; j++) { //X班  
+          let stuArray = classArray[j].students;
+          let tbodyHTML = '';
 
-			gradeArray.forEach((gradeObj, gIdx) => {
+          for (let k = 0; k < stuArray.length; k++) { //學生  
+            tbodyHTML += `<tr>
+                                          <td class="col-classCheck"><div class="SRform-check-red">
+                                              <input class="form-check-input" type="checkbox" name="check">
+                                            </div></td>
+                                          <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="` + stuArray[k].studentName + `" disabled readonly></td>
+                                          <td class="col-studentId"><input type="text" class="form-control rounded-0 readonly" value="` + stuArray[k].studentid + `" disabled readonly></td>
+                                          <td class="col-account"><input type="text" class="form-control rounded-0 readonly" value="` + stuArray[k].account + `" disabled readonly></td>
+                                        </tr>`;
+          }
 
-				const grade = gradeObj.grade;
-				const gradeId = `grade${grade}`;
-				const showGrade = gIdx === 0 ? 'show' : '';
-				const collapsed = gIdx === 0 ? '' : 'collapsed';
+          tableHTML += `<div class="table-responsive">
+                                    <table class="table table-bordered mb-0 table-studentSet checkbox-parent" id="studentSet` + gradeArray[i].grade + `-` + j + `">
+                                      <thead class="checkbox-input">
+                                        <tr>
+                                          <th scope="col" class="col-classCheck"> <button class="table-collapse collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#studentSet` + gradeArray[i].grade + `-` + j + `-tbody" aria-expanded="false" aria-controls="studentSet` + gradeArray[i].grade + `-` + j + `-tbody">
+                                            <span class="form-check-inline SRform-check-red me-2">
+                                            <input class="form-check-input" type="checkbox" name="checkAll">
+                                            </span>` + classArray[j].class + `班
+                                            </button>
+                                          </th>
+                                          <th scope="col" class="col-studentName">姓名</th>
+                                          <th scope="col" class="col-studentId">學號</th>
+                                          <th scope="col" class="col-account">帳號/信箱</th>
+                                        </tr>
+                                      </thead>
+                                      <tbody class="collapse checkbox-children" id="studentSet` + gradeArray[i].grade + `-` + j + `-tbody">
+                                        ` + tbodyHTML + `
+                                      </tbody>
+                                    </table>
+                                   </div>`;
+        }
 
-				let tableHTML = '';
+        accordionHTML += 
+					`<div class="accordion-item checkbox-parent">
+                                        <h4 class="accordion-header checkbox-input">
+                                          <button class="accordion-button collapsed bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapse` + gradeArray[i].grade + `" aria-expanded="false" aria-controls="collapse` + gradeArray[i].grade + `">
+                                          <span class="form-check-inline SRform-check-red me-2">
+                                          <input class="form-check-input my-0" type="checkbox" name="checkAll">
+                                          </span>` + gradeArray[i].grade + `年級
+                                          </button>
+                                        </h4>
+                                        <div id="collapse` + gradeArray[i].grade + `" class="accordion-collapse collapse checkbox-children">
+                                          <div class="accordion-body p-0"> 
+                                            ` + tableHTML + `
+                                          </div>
+                                        </div>
+                                      </div>`;
+      }
 
-				// ===== 班級 =====
-				gradeObj.table.forEach((cls, cIdx) => {
+      //$('#accordionStudentSet').html(accordionHTML);
 
-					const classIndex = cIdx + 1;
+      //checkboxFun();
+    });
+  }
+	
+  // 全選（每張班級 table 各自處理）
+	$('.table-studentSet').on('change', 'input[name="checkAll"]', function () {
+	  const $table = $(this).closest('.table-studentSet');
+	  const checkAll = this;
+	  const $checks = $table.find('input[name="check"]:checkbox');
 
-					const tableId = `${gradeId}-class${classIndex}`;
-					const bodyId = `${tableId}-body`;
-					const checkAllId = `checkAll-${tableId}`;
+	  if (checkAll.checked) {
+		$checks.prop('checked', true);
+		checkAll.indeterminate = false;
+	  } else {
+		$checks.prop('checked', false);
+		checkAll.indeterminate = false;
+	  }
+	});
+	// 單筆勾選 → 控制全選狀態（含 indeterminate）
+	$('.table-studentSet').on('change', 'input[name="check"]', function () {
+		const $table = $(this).closest('.table-studentSet');
+		const checkAll = $table.find('input[name="checkAll"]')[0];
+		const total = $table.find('input[name="check"]:checkbox').length;
+		const checked = $table.find('input[name="check"]:checked').length;
 
-					let studentRows = '';
+		if (!checkAll) return;
 
-					// ===== 學生 =====
-					cls.students.forEach(stu => {
-						studentRows += `
-							<tr>
-								<td class="col-classCheck">
-									<div class="SRform-check-red">
-										<input class="form-check-input" type="checkbox" name="check">
-									</div>
-								</td>
-								<td class="col-studentName">
-									<input type="text" class="form-control rounded-0 readonly" value="${stu.studentName}" disabled readonly>
-								</td>
-								<td class="col-studentId">
-									<input type="text" class="form-control rounded-0 readonly" value="${stu.Sid}" disabled readonly>
-								</td>
-								<td class="col-account">
-									<input type="text" class="form-control rounded-0 readonly" value="${stu.account}" disabled readonly>
-								</td>
-							</tr>
-						`;
-					});
-
-					tableHTML += `
-						<div class="table-responsive">
-							<table class="table table-bordered mb-0 table-studentSet" id="${tableId}">
-								<thead>
-									<tr>
-										<th scope="col" class="col-classCheck">
-											<div class="form-check form-check-inline SRform-check-red">
-												<input class="form-check-input" type="checkbox" id="${checkAllId}" name="checkAll">
-											</div>
-											<button class="btn btn-link p-0"
-												type="button"
-												data-bs-toggle="collapse"
-												data-bs-target="#${bodyId}"
-												aria-expanded="true"
-												aria-controls="${bodyId}">
-												${cls.class}
-											</button>
-										</th>
-										<th class="col-studentName">姓名</th>
-										<th class="col-studentId">學號</th>
-										<th class="col-account">帳號/信箱</th>
-									</tr>
-								</thead>
-								<tbody class="collapse show" id="${bodyId}">
-									${studentRows}
-								</tbody>
-							</table>
-						</div>
-					`;
-				});
-
-				// ===== 年級 accordion =====
-				accordionHTML += `
-					<div class="accordion-item">
-						<h4 class="accordion-header">
-							<button class="accordion-button ${collapsed}"
-								type="button"
-								data-bs-toggle="collapse"
-								data-bs-target="#${gradeId}"
-								aria-expanded="${gIdx === 0}"
-								aria-controls="${gradeId}">
-								${grade}年級
-							</button>
-						</h4>
-
-						<div id="${gradeId}" class="accordion-collapse collapse ${showGrade}" data-bs-parent="#accordionStudentSet">
-							<div class="accordion-body p-0">
-								${tableHTML}
-							</div>
-						</div>
-					</div>
-				`;
-			});
-
-			$('#accordionStudentSet').html(accordionHTML);
-			
-			checkboxFun();
-		});
-	}
-
-	//[設定學生]checkbox 
-  function checkboxFun() {
-		// 全選（每張班級 table 各自處理）
-		$('.table-studentSet').on('change', 'input[name="checkAll"]', function () {
-			const $table = $(this).closest('.table-studentSet');
-			const checkAll = this;
-			const $checks = $table.find('input[name="check"]:checkbox');
-
-			if (checkAll.checked) {
-			$checks.prop('checked', true);
+		if (checked === 0) {
+			checkAll.checked = false;
 			checkAll.indeterminate = false;
-			} else {
-			$checks.prop('checked', false);
+		} else if (checked === total) {
+			checkAll.checked = true;
 			checkAll.indeterminate = false;
-			}
-		});
-		// 單筆勾選 → 控制全選狀態（含 indeterminate）
-		$('.table-studentSet').on('change', 'input[name="check"]', function () {
-			const $table = $(this).closest('.table-studentSet');
-			const checkAll = $table.find('input[name="checkAll"]')[0];
-			const total = $table.find('input[name="check"]:checkbox').length;
-			const checked = $table.find('input[name="check"]:checked').length;
+		} else {
+			checkAll.checked = false;
+			checkAll.indeterminate = true;
+		}
+	});
 
-			if (!checkAll) return;
-
-			if (checked === 0) {
-				checkAll.checked = false;
-				checkAll.indeterminate = false;
-			} else if (checked === total) {
-				checkAll.checked = true;
-				checkAll.indeterminate = false;
-			} else {
-				checkAll.checked = false;
-				checkAll.indeterminate = true;
-			}
-		});
-	}
   /////////////////////////////////////////////////
 
   //[學生名單]datatables 
